--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <header>
-        <h1>Lorem ipsum dolor sit amet.</h1>
+        <nav class="navbar">
+            <h3 class="barnd">G3 Architects</h3>
+            <ul class="nav__ul">
+                <li class="nav__list"><a href="#" class="nav__link">Home</a></li>
+                <li class="nav__list"><a href="#" class="nav__link">About</a></li>
+                <li class="nav__list"><a href="#" class="nav__link">Contact US</a></li>
+                <li class="nav__list"><a href="#" class="nav__link">Login</a></li>
+            </ul>
+        </nav>
     </header>
     <main></main>
     <footer></footer>
