complete sponsours section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,22 @@
                 </div>
             </div>
           </section>
+          <!-- Our sponsors section is start here -->
+           <section class="our-sponsors">
+             <div class="section__info">
+                <h3 class="section__title">Our Sponsors</h3>
+                <p class="text__light-gray sponsors__description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+             </div>
+             <div class="sponsors__companies">
+                <img src="images/sponsors/spotify.png" alt="" class="sponsors__img">
+                <img src="images/sponsors/amazon.png" alt="" class="sponsors__img">
+                <img src="images/sponsors/google.png" alt="" class="sponsors__img">
+                <img src="images/sponsors/telerama.png" alt="" class="sponsors__img">
+                <img src="images/sponsors/figma.png" alt="" class="sponsors__img">
+             </div>
+
+           </section>
+
     </main>
     <footer></footer>
 </body>
