complete card fact

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         </section>
         <!-- Features  & enjoy section-->
          <section>
-            <h4>wait a momment</h4>
+            <h4>wait a</h4>
          </section>
          <!-- Some Facts section start here   -->
           <section class="some-facts-section">
             <h3 class="section__title">Some Facts</h3>
-            <p class="text__light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p class="text__light-gray fact__description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             <div class="fact__container">
                 <div class="fact__content">
                     <img src="images/icons/ribon.png" alt="icons is coming soon" class="fact__img">
