added card and img

--- a/index.html
+++ b/index.html
@@ -44,8 +44,32 @@
             </div>
         </section>
         <!-- Features  & enjoy section-->
-         <section>
-            <h4>wait a</h4>
+         <section class="features-section">
+            <div class="features__content">
+                <h3 class="section__title features__heading">Features you will <br> love & enjoy</h3>
+                <p class="features__description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or ra words which don't look even
+                </p>
+                <div class="features__sub-content">
+                    <h4 class="features__title">Desktop & Mobile Version</h4>
+                    <p class="features__description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+                <div class="features__sub-content">
+                    <h4 class="features__title">Drag & Drop Builder</h4>
+                    <p class="features__description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+                <div class="features__sub-content">
+                    <h4 class="features__title">Awesome Modern Design</h4>
+                    <p class="features__description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+                <div class="features__sub-content">
+                    <h4 class="features__title">Super Easy to Edit</h4>
+                    <p class="features__description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+
+            </div>
+            <div class="features__img-content">
+                <img src="images/architect.png" alt="potho is awesome" class="features__img">
+            </div>
          </section>
          <!-- Some Facts section start here   -->
           <section class="some-facts-section">
@@ -87,7 +111,7 @@
                 <img src="images/sponsors/telerama.png" alt="" class="sponsors__img">
                 <img src="images/sponsors/figma.png" alt="" class="sponsors__img">
              </div>
-             
+
            </section>
 
     </main>
