--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </div>
     </header>
     <main>
-        <section class="teams__section">
+        <!-- teams section -->
+        <section class="teams-section">
             <div class="team__img-container">
                 <img src="images/team1.png" alt="two men talk about" class="team__img">
                 <img src="images/team2.png" alt="two men talk about" class="team__img">
@@ -36,12 +37,43 @@
                 <img src="images/team4.png" alt="two men talk about" class="team__img">
             </div>
             <div class="our__features">
-                <h3 class="features__title"> <span class="one">Quick list</span> of Our <span class="two">Features</span></h3>
-                <p class="features__description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                <h1 class="section__title"> <span id="one">Quick list</span> of Our <span id="two">Features</span></h1>
+                <p class="features__description"  >There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
                 <button class="btn">Explore More</button>
             </div>
         </section>
+        <!-- Features  & enjoy section-->
+         <section>
+            <h4>wait a momment</h4>
+         </section>
+         <!-- Some Facts section start here   -->
+          <section class="some-facts-section">
+            <h3 class="section__title">Some Facts</h3>
+            <p class="text__light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact__container">
+                <div class="fact__content">
+                    <img src="images/icons/ribon.png" alt="icons is coming soon" class="fact__img">
+                    <h3 class="fact__number">54</h3>
+                    <h5 class="fact__name">Awards Winnings</h5>
+                </div>
+                <div class="fact__content">
+                    <img src="images/icons/projects.png" alt="icons is coming soon" class="fact__img">
+                    <h3 class="fact__number">1458</h3>
+                    <h5 class="fact__name">Project Finished</h5>
+                </div>
+                <div class="fact__content">
+                    <img src="images/icons/customers.png" alt="icons is coming soon" class="fact__img">
+                    <h3 class="fact__number">590</h3>
+                    <h5 class="fact__name">Clients Worked</h5>
+                </div>
+                <div class="fact__content">
+                    <img src="images/icons/email.png" alt="icons is coming soon" class="fact__img">
+                    <h3 class="fact__number">22578</h3>
+                    <h5 class="fact__name">Email Send</h5>
+                </div>
+            </div>
+          </section>
     </main>
     <footer></footer>
 </body>
