--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
            </section>
 
     </main>
-    <footer></footer>
+    <footer>
+        <p class="footer__description">All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 </html>
