--- a/index.html
+++ b/index.html
@@ -4,20 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3-responsive-web</title>
+    <link rel="stylesheet" href="/style/style.css">
 </head>
-<body>
-    <header>
-        <nav class="navbar">
-            <h3 class="barnd">G3 Architects</h3>
+    <body class="work-sans-font">
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h3 class="brand ">G3 Architects</h3>
             <ul class="nav__ul">
-                <li class="nav__list"><a href="#" class="nav__link">Home</a></li>
-                <li class="nav__list"><a href="#" class="nav__link">About</a></li>
-                <li class="nav__list"><a href="#" class="nav__link">Contact US</a></li>
-                <li class="nav__list"><a href="#" class="nav__link">Login</a></li>
+                <li class="nav__list"><a href="#" class="nav__link ">Home</a></li>
+                <li class="nav__list"><a href="#" class="nav__link ">About</a></li>
+                <li class="nav__list"><a href="#" class="nav__link ">Contact US</a></li>
+                <li class="nav__list"><a href="#" class="nav__link ">Login</a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner__content">
+                <h1 class="banner__title">Brand New 
+                    Group of Architects </h1>
+                <p class="banner__description">There are <br> many variations of passages of Lorem Ipsum available, but the <br> majority have suffered alteration in some form, by injected humour, or ra words which don't look even</p>    
+                <button class="btn">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="" class="banner__img">
+        </div>
     </header>
-    <main></main>
+    <main>
+        <section class="teams__section">
+            <div class="team__img-container">
+                <img src="images/team1.png" alt="two men talk about" class="team__img">
+                <img src="images/team2.png" alt="two men talk about" class="team__img">
+                <img src="images/team3.png" alt="two men talk about" class="team__img">
+                <img src="images/team4.png" alt="two men talk about" class="team__img">
+            </div>
+            <div class="our__features">
+                <h3 class="features__title"> <span class="one">Quick list</span> of Our <span class="two">Features</span></h3>
+                <p class="features__description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="btn">Explore More</button>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
